PropertiesHolder: pass properties from GFDC config to elements